--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <sonar.exclusions>
+            **/api/CpuLoadController.java,
+            **/conf/*.java
+        </sonar.exclusions>
+    </properties>
 
     <dependencies>
         <dependency>
