--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.group.demo</groupId>
     <artifactId>demo-app</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RC-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>demo-app</name>
