--- a/pipeline-config.json
+++ b/pipeline-config.json
@@ -42,6 +42,9 @@
       "platform": {
         "clusterId": "ocp-test",
         "project": "pipeline-demo-test"
+      },
+      "testing": {
+        "enable": false
       }
     },
     {
