--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.group.demo</groupId>
     <artifactId>demo-app</artifactId>
-    <version>1.0.0-RC-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>demo-app</name>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.ssaad.ami</groupId>
         <artifactId>spring-boot-api-service</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.8.0</version>
     </parent>
 
     <properties>
