enable pipeline stages

--- a/pipeline-config.json
+++ b/pipeline-config.json
@@ -5,19 +5,19 @@
   "stages": [
     {
       "taskType": "UNIT_TESTING",
-	  "enable": false
+	  "enable": true
 	},
 	{
       "taskType": "QUALITY_SCANNING",
-	  "enable": false
+	  "enable": true
 	},
 	{
       "taskType": "DEPENDENCY_CHECK",
-	  "enable": false
+	  "enable": true
 	},
 	{
       "taskType": "BINARIES_ARCHIVE",
-	  "enable": false
+	  "enable": true
 	},
 	{
       "taskType": "CONTAINER_BUILD",
@@ -44,7 +44,7 @@
         "project": "pipeline-demo-test"
       },
       "testing": {
-        "enable": false
+        "enable": true
       }
     },
     {
